components/apps/backstage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    hajimari.io/appName: Backstage
    hajimari.io/enable: "true"
spec:
  rules:
  - host: backstage.${CLUSTER_DOMAIN}
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: backstage
              port:
                number: 7007      
  tls:
  - hosts:
    - backstage.${CLUSTER_DOMAIN}
    secretName: backstage-certificate-tls
